Code for Average Cycle Length in CycleCalculator complete code, might edit later