@@ -4,14 +4,18 @@ import java.time.LocalDate;
 import java.time.temporal.ChronoUnit;
 import java.util.List;
 
+@SuppressWarnings({"unused", "MismatchedQueryAndUpdateOfCollection"})
 public class CycleCalculator {
+
     private List<LocalDate> periodHistory;
     private int averageCycleLength;
 
+    // Constructor
     public CycleCalculator(List<LocalDate> periodHistory) {
         this.periodHistory = periodHistory;
         this.averageCycleLength = calculateAverage();
     }
+
     public int getAverageCycleLength() {
         return averageCycleLength;
     }
@@ -30,8 +34,8 @@ public class CycleCalculator {
         if (periodHistory == null || periodHistory.size() < 2) {
             return 28; // default
         }
-        long totalDays = 0;
 
+        long totalDays = 0;
         for (int i = 0; i < periodHistory.size() - 1; i++) {
             long diff = ChronoUnit.DAYS.between(periodHistory.get(i), periodHistory.get(i + 1));
             totalDays += diff;
@@ -40,18 +44,17 @@ public class CycleCalculator {
         return (int) (totalDays / (periodHistory.size() - 1));
     }
 
-    //updates the average cycle length after you add a new period date.
-    public void recalculateAverage() {
-        this.averageCycleLength = calculateAverage();
-    }
     //estimating next period
-    public LocalDate estimateNextPeriod() {
+    public LocalDate periodEstimator() {
         if (periodHistory == null || periodHistory.isEmpty()) {
             return null;
         }
-        LocalDate lastDate = periodHistory.get(periodHistory.size() - 1);
-        return lastDate.plusDays(averageCycleLength);
+
+        LocalDate last = periodHistory.getLast(); // keep your version
+        int avg = getAverageCycleLength();
+        return last.plusDays(avg);
     }
+
     //calculating all cycle lengths
     public int[] getAllCycleDifferences() {
         if (periodHistory == null || periodHistory.size() < 2) {
@@ -59,17 +62,15 @@ public class CycleCalculator {
         }
 
         int[] lengths = new int[periodHistory.size() - 1];
-
         for (int i = 0; i < periodHistory.size() - 1; i++) {
             lengths[i] = (int) ChronoUnit.DAYS.between(periodHistory.get(i), periodHistory.get(i + 1));
         }
-
         return lengths;
     }
-    // adding exception
+
+    // Exception class
     public static class InvalidCycleValueException extends Exception {
         public InvalidCycleValueException(String message) { super(message); }
         public InvalidCycleValueException() { super("Invalid cycle value provided."); }
     }
 }
-
